[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMunin3"
description = "Package for developing Munin Multigraph Plugins"
keywords = ["munin", "monitoring"]
authors = [{name = "Sandro", email = "devel@penguinpee.nl"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dynamic = ["version"] 

[project.urls]
Homepage = "https://aouyar.github.io/PyMunin"
"Source Code" = "https://github.com/penguinpee/PyMunin3"
"Bug Tracker" = "https://github.com/penguinpee/PyMunin3/issues"

[tool.setuptools_scm]
write_to = "src/pymunin/_version.py"
