[metadata]
name = PyMunin
version = 3.0.2
description = Python Module for developing Munin Multigraph Plugins
long_description = file: README.md
long_description_content_type = text/markdown
keywords = munin, monitoring, plugins
url = https://aouyar.github.io/PyMunin
project_urls =
    Source Code = https://github.com/aouyar/PyMunin
    Bug Tracker = https://github.com/aouyar/PyMunin/issues
author = Ali Onur Uyar
author_email = aouyar@gmail.com
maintainer = Sandro
maintainer_email = devel@penguinpee.nl
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Monitoring
install_requires =
    pickle

[options]
package_dir =
    =src
pakages = find:
python_requires = >=3.7

[options.packages.find]
where = src
