[metadata]
name = PyMuninPlugins
version = 3.0.4
description = PyMunin Multigraph Plugins
long_description = file: README.md
long_description_content_type = text/markdown
keywords = munin, monitoring, plugins
url = https://aouyar.github.io/PyMunin
project_urls =
    Source Code = https://github.com/aouyar/PyMuninPlugins
    Bug Tracker = https://github.com/aouyar/PyMuninPlugins/issues
author = Ali Onur Uyar
author_email = aouyar@gmail.com
maintainer = Sandro
maintainer_email = devel@penguinpee.nl
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities
    Topic :: System :: Monitoring

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
    PyMunin >=3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pymunin-install-plugins = pymunin.commands.install:InstallPlugins
