[metadata]
name = PyMunin3
version = 3.0.0
description = Python Module for developing Munin Multigraph Plugins
long_description = file: README.md
long_description_content_type = text/markdown
keywords = munin, monitoring, plugins
url = https://aouyar.github.io/PyMunin
project_urls =
    Source Code = https://github.com/penguinpee/PyMunin3
    Bug Tracker = https://github.com/penguinpee/PyMunin3/issues
author = Sandro
author_email = devel@penguinpee.nl
license = GPLv3
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Monitoring

[options]
python_requires = >=3.7
